--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 </div>
 </header>
 <body>
+      <video src="intro.mp4" type="video/mp4" id="chupeta">
+      </video>
+      <<div class="botao">
+
+        <button onclick="transicao()" type="button" id="bomba" >Comece a Jornada</button>
+        <script type="text/javascript">
+          var video = document.getElementById("chupeta");
+
+          function transicao(){
+            video.play();
+          }
+        </script>
+      </div>
+ 
  <h2>Descrição da linha do tempo</h2>
 <p>O nosso ponto inicial, de acordo com as nossas informações atuais, começa em 3.000 a. C
  na Mesopotâmia com o &quot;Ábaco&quot;, um dispositivo simples de cálculo, que facilitava a
