--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <body>
     <h1>esse link está obsoleto!!!</h1>
-    <h2 href="https://zaralho.github.io/goiaba/">o link certo é este: https://zaralho.github.io/goiaba/</h2>
+    <h2>o link certo é este: <a href="https://zaralho.github.io/goiaba/">https://zaralho.github.io/goiaba/</a></h2>
     <a href="https://neontflame.github.io/Computacional/index2.html">prossiga com cautela na versão anterior pra ver uma versão não-terminada</a>
   </body>
 </html>
